{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 96,
  "lineage": "3548ca4a-a944-fb9e-66f1-e329fad18bc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b32bdecfc2cf7f",
            "association_id": "eipassoc-04b2868ab31cc931c",
            "domain": "vpc",
            "id": "eipalloc-0a9b32bdecfc2cf7f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-042b9bad79f51342b",
            "private_dns": "ip-10-0-94-125.ec2.internal",
            "private_ip": "10.0.94.125",
            "public_dns": "ec2-35-173-210-157.compute-1.amazonaws.com",
            "public_ip": "35.173.210.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_nat"
            },
            "tags_all": {
              "Name": "demo_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "digw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:internet-gateway/igw-01bae8d3202ff2c80",
            "id": "igw-01bae8d3202ff2c80",
            "owner_id": "218347759346",
            "tags": {
              "Name": "digw"
            },
            "tags_all": {
              "Name": "digw"
            },
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b32bdecfc2cf7f",
            "association_id": "eipassoc-04b2868ab31cc931c",
            "connectivity_type": "public",
            "id": "nat-0cc4e5cd8e1cc9dce",
            "network_interface_id": "eni-042b9bad79f51342b",
            "private_ip": "10.0.94.125",
            "public_ip": "35.173.210.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01ab5dce6659fd5f3",
            "tags": {
              "Name": "demo_nat"
            },
            "tags_all": {
              "Name": "demo_nat"
            }
          },
          "dependencies": [
            "aws_eip.demo_nat",
            "aws_internet_gateway.digw",
            "aws_subnet.public-demo-subnet1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:route-table/rtb-08762afe937a7c361",
            "id": "rtb-08762afe937a7c361",
            "owner_id": "218347759346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc4e5cd8e1cc9dce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demo_nat",
            "aws_internet_gateway.digw",
            "aws_nat_gateway.demo_nat",
            "aws_subnet.public-demo-subnet1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:route-table/rtb-0f1268dbb5880b7ab",
            "id": "rtb-0f1268dbb5880b7ab",
            "owner_id": "218347759346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bae8d3202ff2c80",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.digw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-demo-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b2f8b64a1d236e",
            "route_table_id": "rtb-08762afe937a7c361",
            "subnet_id": "subnet-01a94a644564f85e2"
          },
          "dependencies": [
            "aws_eip.demo_nat",
            "aws_internet_gateway.digw",
            "aws_nat_gateway.demo_nat",
            "aws_route_table.private",
            "aws_subnet.private-demo-subnet1",
            "aws_subnet.public-demo-subnet1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-demo-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a7b48c48f498290",
            "route_table_id": "rtb-08762afe937a7c361",
            "subnet_id": "subnet-0522ae2aab701553c"
          },
          "dependencies": [
            "aws_eip.demo_nat",
            "aws_internet_gateway.digw",
            "aws_nat_gateway.demo_nat",
            "aws_route_table.private",
            "aws_subnet.private-demo-subnet2",
            "aws_subnet.public-demo-subnet1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-demo-subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9126a0752fe0722",
            "route_table_id": "rtb-0f1268dbb5880b7ab",
            "subnet_id": "subnet-01ab5dce6659fd5f3"
          },
          "dependencies": [
            "aws_internet_gateway.digw",
            "aws_route_table.public",
            "aws_subnet.public-demo-subnet1a",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-demo-subnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00689399450a2c4c0",
            "route_table_id": "rtb-0f1268dbb5880b7ab",
            "subnet_id": "subnet-04ceddb41b66c18b5"
          },
          "dependencies": [
            "aws_internet_gateway.digw",
            "aws_route_table.public",
            "aws_subnet.public-demo-subnet1b",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:security-group/sg-0c67d891a313a4158",
            "description": "Demo security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c67d891a313a4158",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "demo-security-group",
            "name_prefix": "",
            "owner_id": "218347759346",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-demo-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:subnet/subnet-01a94a644564f85e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a94a644564f85e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218347759346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-demo-subnet1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-demo-subnet1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-demo-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:subnet/subnet-0522ae2aab701553c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0522ae2aab701553c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218347759346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-demo-subnet2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-demo-subnet2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-demo-subnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:subnet/subnet-01ab5dce6659fd5f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ab5dce6659fd5f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218347759346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-demo-subnet1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-demo-subnet1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-demo-subnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:subnet/subnet-04ceddb41b66c18b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ceddb41b66c18b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218347759346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-demo-subnet1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-demo-subnet1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ce33d1db4370a3ff"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218347759346:vpc/vpc-0ce33d1db4370a3ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043b76142d5ddb58c",
            "default_route_table_id": "rtb-07c73d5f08ac737f0",
            "default_security_group_id": "sg-0deaa38765982276d",
            "dhcp_options_id": "dopt-0df17ef81dc1e7e93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce33d1db4370a3ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c73d5f08ac737f0",
            "owner_id": "218347759346",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}